--- a/index.html
+++ b/index.html
@@ -102,7 +102,224 @@
                 <td>15:45 - 16:30</td>
                 <td></td>
             </tr>
-            <!-- Додайте інші дні за аналогією -->
+            <!-- Вівторок -->
+            <tr>
+                <td rowspan="7">Вівторок</td>
+                <td>1</td>
+                <td>Навчання грамоти</td>
+                <td>Англійська мова</td>
+                <td>9:00 - 9:45</td>
+                <td>9:45 - 9:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Навчання грамоти</td>
+                <td>Англійська мова</td>
+                <td>9:55 - 10:40</td>
+                <td>10:40 - 10:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Математика</td>
+                <td>Математика</td>
+                <td>10:50 - 11:35</td>
+                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Ртутоба</td>
+                <td>Українська мова</td>
+                <td>11:55 - 12:40</td>
+                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Plastyka</td>
+                <td>Plastyka</td>
+                <td>13:00 - 13:45</td>
+                <td>13:45 - 13:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Українська світлиця</td>
+                <td>Я досліджую світ</td>
+                <td>13:55 - 14:40</td>
+                <td>14:40 - 14:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Гітара</td>
+                <td>Гітара</td>
+                <td>14:50 - 15:35</td>
+                <td>15:35 - 15:45 (10 хв)</td>
+            </tr>
+            <!-- Середа -->
+            <tr>
+                <td rowspan="9">Середа</td>
+                <td>1</td>
+                <td>Навчання грамоти</td>
+                <td>Англійська мова</td>
+                <td>9:00 - 9:45</td>
+                <td>9:45 - 9:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Математика</td>
+                <td>Jezyk Polski</td>
+                <td>9:55 - 10:40</td>
+                <td>10:40 - 10:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Jezyk Polski</td>
+                <td>Математика</td>
+                <td>10:50 - 11:35</td>
+                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Англійська мова</td>
+                <td>Інформатика</td>
+                <td>11:55 - 12:40</td>
+                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Англійська мова</td>
+                <td>Читання</td>
+                <td>13:00 - 13:45</td>
+                <td>13:45 - 13:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Ударні</td>
+                <td></td>
+                <td>13:55 - 14:40</td>
+                <td>14:40 - 14:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Театр</td>
+                <td>Театр</td>
+                <td>14:50 - 15:35</td>
+                <td>15:35 - 15:45 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Театр</td>
+                <td>Театр</td>
+                <td>15:45 - 16:30</td>
+                <td>16:30 - 16:40 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Ансамбль Крещендо</td>
+                <td>Ансамбль Крещендо</td>
+                <td>16:40 - 17:25</td>
+                <td></td>
+            </tr>
+            <!-- Четвер -->
+            <tr>
+                <td rowspan="8">Четвер</td>
+                <td>1</td>
+                <td>Навчання грамоти</td>
+                <td>Математика</td>
+                <td>9:00 - 9:45</td>
+                <td>9:45 - 9:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Навчання грамоти</td>
+                <td>Jezyk Polski</td>
+                <td>9:55 - 10:40</td>
+                <td>10:40 - 10:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Jezyk Polski</td>
+                <td>Українська мова</td>
+                <td>10:50 - 11:35</td>
+                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Математика</td>
+                <td>Я досліджую світ</td>
+                <td>11:55 - 12:40</td>
+                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Plastyka</td>
+                <td>Edukacja wczesnoszkolna</td>
+                <td>13:00 - 13:45</td>
+                <td>13:45 - 13:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Англійська мова</td>
+                <td>Польська мова (факультатив)</td>
+                <td>13:55 - 14:40</td>
+                <td>14:40 - 14:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Гітара</td>
+                <td>Гітара</td>
+                <td>14:50 - 15:35</td>
+                <td>15:35 - 15:45 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Логопед</td>
+                <td></td>
+                <td>16:30 - 17:45</td>
+                <td></td>
+            </tr>
+            <!-- П'ятниця -->
+            <tr>
+                <td rowspan="6">П'ятниця</td>
+                <td>1</td>
+                <td>Я досліджую світ</td>
+                <td>Українська мова</td>
+                <td>9:00 - 9:45</td>
+                <td>9:45 - 9:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Jezyk Polski</td>
+                <td>Математика</td>
+                <td>9:55 - 10:40</td>
+                <td>10:40 - 10:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Edukacja wczesnoszkolna</td>
+                <td>Читання</td>
+                <td>10:50 - 11:35</td>
+                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Wynowanie fizyczne (basen)</td>
+                <td>Wynowanie fizyczne (basen)</td>
+                <td>11:55 - 12:40</td>
+                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Wynowanie fizyczne (basen)</td>
+                <td>Wynowanie fizyczne (basen)</td>
+                <td>13:00 - 13:45</td>
+                <td>13:45 - 13:55 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Тхаквандо</td>
+                <td>Тхаквандо</td>
+                <td>17:00 - 18:00</td>
+                <td>14:40 - 14:50 (10 хв)</td>
+            </tr>
         </tbody>
     </table>
 
