--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
             { day: 'П'ятниця', number: 1, daniel: 'Я досліджую світ', mark: 'Українська мова', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
             { day: 'П'ятниця', number: 2, daniel: 'Jezyk Polski', mark: 'Математика', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
             { day: 'П'ятниця', number: 3, daniel: 'Edukacja wczesnoszkolna', mark: 'Читання', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)'},
-            { day: 'П'ятниця', number: 4, daniel: 'Очікування автобусу', mark: 'Очікування автобусу', time: '11:55 - 12:20'},
-            { day: 'П'ятниця', number: 5, daniel: 'Wyhowanie фізичне (басейн)', mark: 'Wyhowanie фізичне (басейн)', time: '13:00 - 14:00'},
-            { day: 'П'ятниця', number: 6, daniel: 'Шлях з басейну до школи на автобусі', mark: 'Шлях з басейну до школи на автобусі', time: '14:30 - 14:55'},
+            { day: 'П'ятниця', number: 4, daniel: 'Очікування автобусу', mark: 'Очікування автобусу', time: '11:55 - 12:20', break: ''},
+            { day: 'П'ятниця', number: 5, daniel: 'Wyhowanie фізичне (басейн)', mark: 'Wyhowanie фізичне (басейн)', time: '13:00 - 14:00', break: ''},
+            { day: 'П'ятниця', number: 6, daniel: 'Шлях з басейну до школи на автобусі', mark: 'Шлях з басейну до школи на автобусі', time: '14:30 - 14:55', break: ''},
             { day: 'П'ятниця', number: 7, daniel: 'Тхэквандо', mark: 'Тхэквандо', time: '17:00 - 18:00', break: '' },
             // Додайте інші дні та уроки за аналогією
         ];
