--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p id="current-lesson-mark">Марк: </p>
 
     <h1>Розклад уроків</h1>
-    <table id="schedule">
+   <table id="schedule">
         <thead>
             <tr>
                 <th>День</th>
@@ -46,7 +46,7 @@
         <tbody>
             <!-- Понеділок -->
             <tr>
-                <td rowspan="8">Понеділок</td>
+                <td rowspan="9">Понеділок</td>
                 <td>1</td>
                 <td>Навчання грамоти</td>
                 <td>Читання</td>
@@ -102,6 +102,13 @@
                 <td>15:45 - 16:30</td>
                 <td></td>
             </tr>
+            <tr>
+                <td>9</td>
+                <td>Тхэквандо</td>
+                <td>Тхэквандо</td>
+                <td>17:00 - 18:00</td>
+                <td></td>
+            </tr>
             <!-- Вівторок -->
             <tr>
                 <td rowspan="7">Вівторок</td>
@@ -127,7 +134,7 @@
             </tr>
             <tr>
                 <td>4</td>
-                <td>Ртутоба</td>
+                <td>Przyroda</td>
                 <td>Українська мова</td>
                 <td>11:55 - 12:40</td>
                 <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
@@ -148,7 +155,7 @@
             </tr>
             <tr>
                 <td>7</td>
-                <td>Гітара</td>
+                <td></td>
                 <td>Гітара</td>
                 <td>14:50 - 15:35</td>
                 <td>15:35 - 15:45 (10 хв)</td>
@@ -209,18 +216,18 @@
                 <td>Театр</td>
                 <td>Театр</td>
                 <td>15:45 - 16:30</td>
-                <td>16:30 - 16:40 (10 хв)</td>
+                <td></td>
             </tr>
             <tr>
                 <td>9</td>
-                <td>Ансамбль Крещендо</td>
-                <td>Ансамбль Крещендо</td>
-                <td>16:40 - 17:25</td>
+                <td>Тхэквандо</td>
+                <td>Тхэквандо</td>
+                <td>17:00 - 18:00</td>
                 <td></td>
             </tr>
             <!-- Четвер -->
             <tr>
-                <td rowspan="8">Четвер</td>
+                <td rowspan="7">Четвер</td>
                 <td>1</td>
                 <td>Навчання грамоти</td>
                 <td>Математика</td>
@@ -264,21 +271,14 @@
             </tr>
             <tr>
                 <td>7</td>
-                <td>Гітара</td>
+                <td></td>
                 <td>Гітара</td>
                 <td>14:50 - 15:35</td>
                 <td>15:35 - 15:45 (10 хв)</td>
             </tr>
-            <tr>
-                <td>8</td>
-                <td>Логопед</td>
-                <td></td>
-                <td>16:30 - 17:45</td>
-                <td></td>
-            </tr>
             <!-- П'ятниця -->
             <tr>
-                <td rowspan="6">П'ятниця</td>
+                <td rowspan="7">П'ятниця</td>
                 <td>1</td>
                 <td>Я досліджую світ</td>
                 <td>Українська мова</td>
@@ -301,24 +301,31 @@
             </tr>
             <tr>
                 <td>4</td>
-                <td>Wynowanie fizyczne (basen)</td>
-                <td>Wynowanie fizyczne (basen)</td>
-                <td>11:55 - 12:40</td>
-                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+                <td>Очікування автобусу</td>
+                <td>Очікування автобусу</td>
+                <td>11:55 - 12:20</td>
+                <td></td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Wynowanie fizyczne (basen)</td>
-                <td>Wynowanie fizyczne (basen)</td>
-                <td>13:00 - 13:45</td>
-                <td>13:45 - 13:55 (10 хв)</td>
+                <td>Wyhowanie фізичне (басейн)</td>
+                <td>Wyhowanie фізичне (басейн)</td>
+                <td>13:00 - 14:00</td>
+                <td></td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>Тхаквандо</td>
-                <td>Тхаквандо</td>
+                <td>Шлях з басейну до школи на автобусі</td>
+                <td>Шлях з басейну до школи на автобусі</td>
+                <td>14:30 - 14:55</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Тхэквандо</td>
+                <td>Тхэквандо</td>
                 <td>17:00 - 18:00</td>
-                <td>14:40 - 14:50 (10 хв)</td>
+                <td></td>
             </tr>
         </tbody>
     </table>
