--- a/index.html
+++ b/index.html
@@ -332,80 +332,79 @@
 
 
 
-    <script>
-        const schedule = [
-            // Понеділок
-            { day: 'Понеділок', number: 1, daniel: 'Навчання грамоти', mark: 'Читання', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
-            { day: 'Понеділок', number: 2, daniel: 'Навчання грамоти', mark: 'Математика', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
-            { day: 'Понеділок', number: 3, daniel: 'Математика', mark: 'Jezyk Polski', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
-            { day: 'Понеділок', number: 4, daniel: 'Англійська мова', mark: 'Українська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
-            { day: 'Понеділок', number: 5, daniel: 'Ударні', mark: 'Англійська мова', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
-            { day: 'Понеділок', number: 6, daniel: 'Теорія музики', mark: 'Теорія музики', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
-            { day: 'Понеділок', number: 7, daniel: 'Театр', mark: 'Театр', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
-            { day: 'Понеділок', number: 8, daniel: 'Театр ансамбль', mark: 'Театр ансамбль', time: '15:45 - 16:30', break: '' },
-            { day: 'Понеділок', number: 9, daniel: 'Тхэквандо', mark: 'Тхэквандо', time: '17:00 - 18:00', break: '' },
-            // Вівторок
-            { day: 'Вівторок', number: 1, daniel: 'Навчання грамоти', mark: 'Англійська мова', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
-            { day: 'Вівторок', number: 2, daniel: 'Навчання грамоти', mark: 'Англійська мова', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
-            { day: 'Вівторок', number: 3, daniel: 'Математика', mark: 'Математика', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
-            { day: 'Вівторок', number: 4, daniel: 'Przyroda', mark: 'Українська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
-            { day: 'Вівторок', number: 5, daniel: 'Plastyka', mark: 'Plastyka', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
-            { day: 'Вівторок', number: 6, daniel: 'Українська світлиця', mark: 'Я досліджую світ', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
-            { day: 'Вівторок', number: 7, daniel: '', mark: 'Гітара', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
-            // Середа
-            { day: 'Середа', number: 1, daniel: 'Навчання грамоти', mark: 'Англійська мова', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
-            { day: 'Середа', number: 2, daniel: 'Математика', mark: 'Jezyk Polski', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
-            { day: 'Середа', number: 3, daniel: 'Jezyk Polski', mark: 'Математика', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
-            { day: 'Середа', number: 4, daniel: 'Англійська мова', mark: 'Інформатика', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
-            { day: 'Середа', number: 5, daniel: 'Англійська мова', mark: 'Читання', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
-            { day: 'Середа', number: 6, daniel: 'Ударні', mark: '', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
-            { day: 'Середа', number: 7, daniel: 'Театр', mark: 'Театр', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
-            { day: 'Середа', number: 8, daniel: 'Театр', mark: 'Театр', time: '15:45 - 16:30', break: '' },
-            { day: 'Середа', number: 9, daniel: 'Тхэквандо', mark: 'Тхэквандо', time: '17:00 - 18:00', break: '' },
-            // Четвер
-            { day: 'Четвер', number: 1, daniel: 'Навчання грамоти', mark: 'Математика', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
-            { day: 'Четвер', number: 2, daniel: 'Навчання грамоти', mark: 'Jezyk Polski', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
-            { day: 'Четвер', number: 3, daniel: 'Jezyk Polski', mark: 'Українська мова', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
-            { day: 'Четвер', number: 4, daniel: 'Математика', mark: 'Я досліджую світ', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
-            { day: 'Четвер', number: 5, daniel: 'Plastyka', mark: 'Edukacja wczesnoszkolna', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
-            { day: 'Четвер', number: 6, daniel: 'Англійська мова', mark: 'Польська мова (факультатив)', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
-            { day: 'Четвер', number: 7, daniel: '', mark: 'Гітара', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
-            // П'ятниця
-            { day: 'П'ятниця', number: 1, daniel: 'Я досліджую світ', mark: 'Українська мова', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
-            { day: 'П'ятниця', number: 2, daniel: 'Jezyk Polski', mark: 'Математика', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
-            { day: 'П'ятниця', number: 3, daniel: 'Edukacja wczesnoszkolna', mark: 'Читання', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)'},
-            { day: 'П'ятниця', number: 4, daniel: 'Очікування автобусу', mark: 'Очікування автобусу', time: '11:55 - 12:20', break: ''},
-            { day: 'П'ятниця', number: 5, daniel: 'Wyhowanie фізичне (басейн)', mark: 'Wyhowanie фізичне (басейн)', time: '13:00 - 14:00', break: ''},
-            { day: 'П'ятниця', number: 6, daniel: 'Шлях з басейну до школи на автобусі', mark: 'Шлях з басейну до школи на автобусі', time: '14:30 - 14:55', break: ''},
-            { day: 'П'ятниця', number: 7, daniel: 'Тхэквандо', mark: 'Тхэквандо', time: '17:00 - 18:00', break: '' },
-            // Додайте інші дні та уроки за аналогією
-        ];
+   <script>
+    const schedule = [
+        // Понеділок
+        { day: 'Понеділок', number: 1, daniel: 'Навчання грамоти', mark: 'Читання', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
+        { day: 'Понеділок', number: 2, daniel: 'Навчання грамоти', mark: 'Математика', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
+        { day: 'Понеділок', number: 3, daniel: 'Математика', mark: 'Jezyk Polski', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
+        { day: 'Понеділок', number: 4, daniel: 'Англійська мова', mark: 'Українська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
+        { day: 'Понеділок', number: 5, daniel: 'Ударні', mark: 'Англійська мова', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
+        { day: 'Понеділок', number: 6, daniel: 'Теорія музики', mark: 'Теорія музики', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+        { day: 'Понеділок', number: 7, daniel: 'Театр', mark: 'Театр', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
+        { day: 'Понеділок', number: 8, daniel: 'Театр ансамбль', mark: 'Театр ансамбль', time: '15:45 - 16:30', break: '' },
+        { day: 'Понеділок', number: 9, daniel: 'Тхэквандо', mark: 'Тхэквандо', time: '17:00 - 18:00', break: '' },
+        // Вівторок
+        { day: 'Вівторок', number: 1, daniel: 'Навчання грамоти', mark: 'Англійська мова', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
+        { day: 'Вівторок', number: 2, daniel: 'Навчання грамоти', mark: 'Англійська мова', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
+        { day: 'Вівторок', number: 3, daniel: 'Математика', mark: 'Математика', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
+        { day: 'Вівторок', number: 4, daniel: 'Przyroda', mark: 'Українська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
+        { day: 'Вівторок', number: 5, daniel: 'Plastyka', mark: 'Plastyka', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
+        { day: 'Вівторок', number: 6, daniel: 'Українська світлиця', mark: 'Я досліджую світ', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+        { day: 'Вівторок', number: 7, daniel: '', mark: 'Гітара', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
+        // Середа
+        { day: 'Середа', number: 1, daniel: 'Навчання грамоти', mark: 'Англійська мова', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
+        { day: 'Середа', number: 2, daniel: 'Математика', mark: 'Jezyk Polski', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
+        { day: 'Середа', number: 3, daniel: 'Jezyk Polski', mark: 'Математика', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
+        { day: 'Середа', number: 4, daniel: 'Англійська мова', mark: 'Інформатика', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
+        { day: 'Середа', number: 5, daniel: 'Англійська мова', mark: 'Читання', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
+        { day: 'Середа', number: 6, daniel: 'Ударні', mark: '', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+        { day: 'Середа', number: 7, daniel: 'Театр', mark: 'Театр', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
+        { day: 'Середа', number: 8, daniel: 'Театр', mark: 'Театр', time: '15:45 - 16:30', break: '' },
+        { day: 'Середа', number: 9, daniel: 'Тхэквандо', mark: 'Тхэквандо', time: '17:00 - 18:00', break: '' },
+        // Четвер
+        { day: 'Четвер', number: 1, daniel: 'Навчання грамоти', mark: 'Математика', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
+        { day: 'Четвер', number: 2, daniel: 'Навчання грамоти', mark: 'Jezyk Polski', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
+        { day: 'Четвер', number: 3, daniel: 'Jezyk Polski', mark: 'Українська мова', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
+        { day: 'Четвер', number: 4, daniel: 'Математика', mark: 'Я досліджую світ', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 5-6 класи)' },
+        { day: 'Четвер', number: 5, daniel: 'Plastyka', mark: 'Edukacja wczesnoszkolna', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
+        { day: 'Четвер', number: 6, daniel: 'Англійська мова', mark: 'Польська мова (факультатив)', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+        { day: 'Четвер', number: 7, daniel: '', mark: 'Гітара', time: '14:50 - 15:35', break: '15:35 - 15:45 (10 хв)' },
+        // П'ятниця
+        { day: 'П\'ятниця', number: 1, daniel: 'Я досліджую світ', mark: 'Українська мова', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
+        { day: 'П\'ятниця', number: 2, daniel: 'Jezyk Polski', mark: 'Математика', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
+        { day: 'П\'ятниця', number: 3, daniel: 'Edukacja wczesnoszkolna', mark: 'Читання', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-4 класи)' },
+        { day: 'П\'ятниця', number: 4, daniel: 'Очікування автобусу', mark: 'Очікування автобусу', time: '11:55 - 12:20', break: '' },
+        { day: 'П\'ятниця', number: 5, daniel: 'Wyhowanie фізичне (басейн)', mark: 'Wyhowanie фізичне (басейн)', time: '13:00 - 14:00', break: '' },
+        { day: 'П\'ятниця', number: 6, daniel: 'Шлях з басейну до школи на автобусі', mark: 'Шлях з басейну до школи на автобусі', time: '14:30 - 14:55', break: '' },
+        { day: 'П\'ятниця', number: 7, daniel: 'Тхэквандо', mark: 'Тхэквандо', time: '17:00 - 18:00', break: '' }
+    ];
 
-        function getCurrentLesson() {
-            const now = new Date();
-            const currentTime = now.getHours() * 60 + now.getMinutes();
+    function getCurrentLesson() {
+        const now = new Date();
+        const currentTime = now.getHours() * 60 + now.getMinutes();
 
-            let danielLesson = 'Немає уроку';
-            let markLesson = 'Немає уроку';
+        let danielLesson = 'Немає уроку';
+        let markLesson = 'Немає уроку';
 
-            schedule.forEach(lesson => {
-                const [startHour, startMinute] = lesson.time.split(' - ')[0].split(':').map(Number);
-                const [endHour, endMinute] = lesson.time.split(' - ')[1].split(':').map(Number);
-                const startTime = startHour * 60 + startMinute;
-                const endTime = endHour * 60 + endMinute;
+        schedule.forEach(lesson => {
+            const [startHour, startMinute] = lesson.time.split(' - ')[0].split(':').map(Number);
+            const [endHour, endMinute] = lesson.time.split(' - ')[1].split(':').map(Number);
+            const startTime = startHour * 60 + startMinute;
+            const endTime = endHour * 60 + endMinute;
 
-                if (currentTime >= startTime && currentTime <= endTime) {
-                    danielLesson = lesson.daniel;
-                    markLesson = lesson.mark;
-                }
-            });
+            if (currentTime >= startTime && currentTime <= endTime) {
+                danielLesson = lesson.daniel;
+                markLesson = lesson.mark;
+            }
+        });
 
-            document.getElementById('current-lesson-daniel').textContent = `Данііл: ${danielLesson}`;
-            document.getElementById('current-lesson-mark').textContent = `Марк: ${markLesson}`;
-        }
+        document.getElementById('current-lesson-daniel').textContent = `Даніїл: ${danielLesson}`;
+        document.getElementById('current-lesson-mark').textContent = `Марк: ${markLesson}`;
+    }
 
-        setInterval(getCurrentLesson, 60000); // Оновлювати кожну хвилину
-        getCurrentLesson(); // Викликати одразу при завантаженні сторінки
-    </script>
+    setInterval(getCurrentLesson, 60000); // Оновлювати кожну хвилину
+    getCurrentLesson(); // Викликати одразу при завантаженні сторінки
+</script>
 </body>
 </html>
