--- a/index.html
+++ b/index.html
@@ -6,33 +6,113 @@
     <title>Розклад уроків</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
+
+        h1, h2 {
+            color: #2c3e50;
             margin-bottom: 20px;
         }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
+
+        h1 {
+            font-size: 2.5rem;
             text-align: center;
         }
-        th {
-            background-color: #f2f2f2;
+
+        h2 {
+            font-size: 1.8rem;
+            margin-top: 30px;
         }
-        .current-lesson {
-            background-color: #d1e7dd;
+
+        .current-lessons {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+            width: 80%;
+            max-width: 600px;
+            text-align: center;
+        }
+
+        .current-lessons p {
+            font-size: 1.2rem;
+            margin: 10px 0;
+            color: #555;
+        }
+
+        table {
+            width: 90%;
+            max-width: 1000px;
+            border-collapse: collapse;
+            margin: 20px 0;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        th, td {
+            padding: 12px;
+            text-align: center;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #2c3e50;
+            color: #ffffff;
+            font-weight: bold;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+
+        .break {
+            background-color: #e8f5e9;
+            color: #2e7d32;
+        }
+
+        .lunch {
+            background-color: #fff3e0;
+            color: #e65100;
+        }
+
+        .no-lesson {
+            background-color: #ffebee;
+            color: #c62828;
+        }
+
+        .footer {
+            margin-top: 30px;
+            font-size: 0.9rem;
+            color: #777;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h2>Поточні уроки</h2>
-    <p id="current-lesson-daniel">Даніїл: </p>
-    <p id="current-lesson-mark">Марк: </p>
-
     <h1>Розклад уроків</h1>
-   <table id="schedule">
+
+    <div class="current-lessons">
+        <h2>Поточні уроки</h2>
+        <p id="current-lesson-daniel">Даніїл: </p>
+        <p id="current-lesson-mark">Марк: </p>
+    </div>
+
+    <table id="schedule">
         <thead>
             <tr>
                 <th>День</th>
@@ -51,49 +131,49 @@
                 <td>Навчання грамоти</td>
                 <td>Читання</td>
                 <td>9:00 - 9:45</td>
-                <td>9:45 - 9:55 (10 хв)</td>
+                <td class="break">9:45 - 9:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Навчання грамоти</td>
                 <td>Математика</td>
                 <td>9:55 - 10:40</td>
-                <td>10:40 - 10:50 (10 хв)</td>
+                <td class="break">10:40 - 10:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Математика</td>
                 <td>Jezyk Polski</td>
                 <td>10:50 - 11:35</td>
-                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+                <td class="lunch">11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Англійська мова</td>
                 <td>Українська мова</td>
                 <td>11:55 - 12:40</td>
-                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+                <td class="lunch">12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Ударні</td>
                 <td>Англійська мова</td>
                 <td>13:00 - 13:45</td>
-                <td>13:45 - 13:55 (10 хв)</td>
+                <td class="break">13:45 - 13:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Теорія музики</td>
                 <td>Теорія музики</td>
                 <td>13:55 - 14:40</td>
-                <td>14:40 - 14:50 (10 хв)</td>
+                <td class="break">14:40 - 14:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>Театр</td>
                 <td>Театр</td>
                 <td>14:50 - 15:35</td>
-                <td>15:35 - 15:45 (10 хв)</td>
+                <td class="break">15:35 - 15:45 (10 хв)</td>
             </tr>
             <tr>
                 <td>8</td>
@@ -116,49 +196,49 @@
                 <td>Навчання грамоти</td>
                 <td>Англійська мова</td>
                 <td>9:00 - 9:45</td>
-                <td>9:45 - 9:55 (10 хв)</td>
+                <td class="break">9:45 - 9:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Навчання грамоти</td>
                 <td>Англійська мова</td>
                 <td>9:55 - 10:40</td>
-                <td>10:40 - 10:50 (10 хв)</td>
+                <td class="break">10:40 - 10:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Математика</td>
                 <td>Математика</td>
                 <td>10:50 - 11:35</td>
-                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+                <td class="lunch">11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Przyroda</td>
                 <td>Українська мова</td>
                 <td>11:55 - 12:40</td>
-                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+                <td class="lunch">12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Plastyka</td>
                 <td>Plastyka</td>
                 <td>13:00 - 13:45</td>
-                <td>13:45 - 13:55 (10 хв)</td>
+                <td class="break">13:45 - 13:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Українська світлиця</td>
                 <td>Я досліджую світ</td>
                 <td>13:55 - 14:40</td>
-                <td>14:40 - 14:50 (10 хв)</td>
+                <td class="break">14:40 - 14:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td></td>
                 <td>Гітара</td>
                 <td>14:50 - 15:35</td>
-                <td>15:35 - 15:45 (10 хв)</td>
+                <td class="break">15:35 - 15:45 (10 хв)</td>
             </tr>
             <!-- Середа -->
             <tr>
@@ -167,49 +247,49 @@
                 <td>Навчання грамоти</td>
                 <td>Англійська мова</td>
                 <td>9:00 - 9:45</td>
-                <td>9:45 - 9:55 (10 хв)</td>
+                <td class="break">9:45 - 9:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Математика</td>
                 <td>Jezyk Polski</td>
                 <td>9:55 - 10:40</td>
-                <td>10:40 - 10:50 (10 хв)</td>
+                <td class="break">10:40 - 10:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Jezyk Polski</td>
                 <td>Математика</td>
                 <td>10:50 - 11:35</td>
-                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+                <td class="lunch">11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Англійська мова</td>
                 <td>Інформатика</td>
                 <td>11:55 - 12:40</td>
-                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+                <td class="lunch">12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Англійська мова</td>
                 <td>Читання</td>
                 <td>13:00 - 13:45</td>
-                <td>13:45 - 13:55 (10 хв)</td>
+                <td class="break">13:45 - 13:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Ударні</td>
                 <td></td>
                 <td>13:55 - 14:40</td>
-                <td>14:40 - 14:50 (10 хв)</td>
+                <td class="break">14:40 - 14:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>Театр</td>
                 <td>Театр</td>
                 <td>14:50 - 15:35</td>
-                <td>15:35 - 15:45 (10 хв)</td>
+                <td class="break">15:35 - 15:45 (10 хв)</td>
             </tr>
             <tr>
                 <td>8</td>
@@ -232,49 +312,49 @@
                 <td>Навчання грамоти</td>
                 <td>Математика</td>
                 <td>9:00 - 9:45</td>
-                <td>9:45 - 9:55 (10 хв)</td>
+                <td class="break">9:45 - 9:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Навчання грамоти</td>
                 <td>Jezyk Polski</td>
                 <td>9:55 - 10:40</td>
-                <td>10:40 - 10:50 (10 хв)</td>
+                <td class="break">10:40 - 10:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Jezyk Polski</td>
                 <td>Українська мова</td>
                 <td>10:50 - 11:35</td>
-                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+                <td class="lunch">11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Математика</td>
                 <td>Я досліджую світ</td>
                 <td>11:55 - 12:40</td>
-                <td>12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
+                <td class="lunch">12:40 - 13:00 (20 хв) (Обід 5-6 класи)</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Plastyka</td>
                 <td>Edukacja wczesnoszkolna</td>
                 <td>13:00 - 13:45</td>
-                <td>13:45 - 13:55 (10 хв)</td>
+                <td class="break">13:45 - 13:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Англійська мова</td>
                 <td>Польська мова (факультатив)</td>
                 <td>13:55 - 14:40</td>
-                <td>14:40 - 14:50 (10 хв)</td>
+                <td class="break">14:40 - 14:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td></td>
                 <td>Гітара</td>
                 <td>14:50 - 15:35</td>
-                <td>15:35 - 15:45 (10 хв)</td>
+                <td class="break">15:35 - 15:45 (10 хв)</td>
             </tr>
             <!-- П'ятниця -->
             <tr>
@@ -283,21 +363,21 @@
                 <td>Я досліджую світ</td>
                 <td>Українська мова</td>
                 <td>9:00 - 9:45</td>
-                <td>9:45 - 9:55 (10 хв)</td>
+                <td class="break">9:45 - 9:55 (10 хв)</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Jezyk Polski</td>
                 <td>Математика</td>
                 <td>9:55 - 10:40</td>
-                <td>10:40 - 10:50 (10 хв)</td>
+                <td class="break">10:40 - 10:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Edukacja wczesnoszkolna</td>
                 <td>Читання</td>
                 <td>10:50 - 11:35</td>
-                <td>11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
+                <td class="lunch">11:35 - 11:55 (20 хв) (Обід 1-4 класи)</td>
             </tr>
             <tr>
                 <td>4</td>
@@ -329,6 +409,10 @@
             </tr>
         </tbody>
     </table>
+
+    <div class="footer">
+        <p>Розклад уроків для Даніїла та Марка</p>
+    </div>
 
 
 
