--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div class="current-lessons">
         <h2>Поточні уроки</h2>
-        <p id="current-lesson-daniel">Даніїл: </p>
+        <p id="current-lesson-daniel">Данііл: </p>
         <p id="current-lesson-mark">Марк: </p>
     </div>
 
@@ -117,7 +117,7 @@
             <tr>
                 <th>День</th>
                 <th>№</th>
-                <th>Урокі (Даніїл)</th>
+                <th>Урокі (Данііл)</th>
                 <th>Урокі (Марк)</th>
                 <th>Час проведення уроку</th>
                 <th>Перерва</th>
@@ -411,7 +411,7 @@
     </table>
 
     <div class="footer">
-        <p>Розклад уроків для Даніїла та Марка</p>
+        <p>Розклад уроків для Данііла та Марка</p>
     </div>
 
 
@@ -507,7 +507,7 @@
             }
         });
 
-        document.getElementById('current-lesson-daniel').textContent = `Даніїл: ${danielLesson} (${danielTime})`;
+        document.getElementById('current-lesson-daniel').textContent = `Данііл: ${danielLesson} (${danielTime})`;
         document.getElementById('current-lesson-mark').textContent = `Марк: ${markLesson} (${markTime})`;
     }
 
