--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
             { day: 'Середа', number: 3, daniel: 'Англійська мова', mark: 'Edukacja wczesnoszkolna', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-3 класи)' },
             { day: 'Середа', number: 4, daniel: 'Edukacja wczesnoszkolna', mark: 'Англійська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 4-5 класи)' },
             { day: 'Середа', number: 5, daniel: 'Українська мова', mark: 'Читання', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
-            { day: 'Середа', number: 6, daniel: 'Tehnika', mark: 'Фізична культура / Музика / Гітара', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+            { day: 'Середа', number: 6, daniel: 'Tehnika', mark: 'Фізична культура / Музика', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
             { day: 'Середа', number: 7, daniel: 'Дорога до Театру', mark: 'Дорога до Театру', time: '14:40 - 15:30', break: '' },
             { day: 'Середа', number: 8, daniel: 'Театр', mark: 'Театр', time: '15:30 - 16:20', break: '' },
             { day: 'Середа', number: 9, daniel: 'Дорога до Тхеквандо', mark: 'Дорога до Тхеквандо', time: '16:20 - 17:00', break: '' },
@@ -624,7 +624,8 @@
             { day: 'Четвер', number: 3, daniel: 'Українська мова', mark: 'Математика', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-3 класи)' },
             { day: 'Четвер', number: 4, daniel: 'Англійська мова', mark: 'Українська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 4-5 класи)' },
             { day: 'Четвер', number: 5, daniel: 'Читання', mark: 'Читання', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
-            { day: 'Четвер', number: 6, daniel: 'Ударні', mark: '', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+            { day: 'Четвер', number: 6, daniel: 'Speaking Club', mark: 'Гітара', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+            { day: 'Четвер', number: 7, daniel: 'Ударні', mark: 'Speaking Club', time: '14:50 - 15:35', break: '' },
             
             // П'ятниця
             { day: 'П\'ятниця', number: 1, daniel: 'Українська мова', mark: 'Математика', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
