--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
             { day: 'Понеділок', number: 4, daniel: 'Edukacja wczesnoszkolna', mark: 'Англійська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 4-5 класи)' },
             { day: 'Понеділок', number: 5, daniel: 'Читання', mark: 'Українська мова', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
             { day: 'Понеділок', number: 6, daniel: 'Фізичне виховання / Музика', mark: 'Гітара', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
-            { day: 'Понеділок', number: 7, daniel: 'Дорога до Театру', mark: 'Дорога до Театру', time: '14:40 - 15:30', break: '' },
+            { day: 'Понеділок', number: 7, daniel: 'Робототехніка', mark: 'Робототехніка', time: '14:50 - 15:35', break: '' },
             { day: 'Понеділок', number: 8, daniel: 'Театр', mark: 'Театр', time: '15:30 - 16:20', break: '' },
             { day: 'Понеділок', number: 9, daniel: 'Дорога до Тхеквандо', mark: 'Дорога до Тхеквандо', time: '16:20 - 17:00', break: '' },
             { day: 'Понеділок', number: 10, daniel: 'Тхеквандо', mark: 'Тхеквандо', time: '17:00 - 18:00', break: '' },
