--- a/index.html
+++ b/index.html
@@ -613,9 +613,9 @@
             { day: 'Середа', number: 4, daniel: 'Edukacja wczesnoszkolna', mark: 'Англійська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 4-5 класи)' },
             { day: 'Середа', number: 5, daniel: 'Українська мова', mark: 'Читання', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
             { day: 'Середа', number: 6, daniel: 'Tehnika', mark: 'Фізична культура / Музика', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
-            { day: 'Середа', number: 7, daniel: 'Дорога до Театру', mark: 'Дорога до Театру', time: '14:40 - 15:30', break: '' },
-            { day: 'Середа', number: 8, daniel: 'Театр', mark: 'Театр', time: '15:30 - 16:20', break: '' },
-            { day: 'Середа', number: 9, daniel: 'Дорога до Тхеквандо', mark: 'Дорога до Тхеквандо', time: '16:20 - 17:00', break: '' },
+            { day: 'Середа', number: 7, daniel: 'Теорія музики (1 гр.) ', mark: 'Теорія музики (1 гр.)', time: '14:50 - 15:35', break: '' },
+            { day: 'Середа', number: 8, daniel: 'Ансамбль «Crescendo»', mark: 'Ансамбль «Crescendo»', time: '15:45 - 16:30', break: '' },
+            { day: 'Середа', number: 9, daniel: 'Дорога до Тхеквандо', mark: 'Дорога до Тхеквандо', time: '16:30 - 17:00', break: '' },
             { day: 'Середа', number: 10, daniel: 'Тхеквандо', mark: 'Тхеквандо', time: '17:00 - 18:00', break: '' },
             
             // Четвер
