--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
             </tr>
             <tr>
                 <td>7</td>
-                <td>Дорога до Театру</td>
-                <td>Дорога до Театру</td>
-                <td>14:40 - 15:30</td>
+                <td>Робототехніка</td>
+                <td>Робототехніка</td>
+                <td>14:50 - 15:35</td>
                 <td></td>
             </tr>
             <tr>
@@ -439,29 +439,29 @@
             <tr>
                 <td>6</td>
                 <td>Tehnika</td>
-                <td>Фізична культура / Музика / Гітара</td>
+                <td>Фізична культура / Музика</td>
                 <td>13:55 - 14:40</td>
                 <td class="break">14:40 - 14:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>Дорога до Театру</td>
-                <td>Дорога до Театру</td>
-                <td>14:40 - 15:30</td>
+                <td>Теорія музики (1 гр.)</td>
+                <td>Теорія музики (1 гр.)</td>
+                <td>14:50 - 15:35</td>
                 <td></td>
             </tr>
             <tr>
                 <td>8</td>
-                <td>Театр</td>
-                <td>Театр</td>
-                <td>15:30 - 16:20</td>
+                <td>Ансамбль «Crescendo»</td>
+                <td>Ансамбль «Crescendo»</td>
+                <td>15:45 - 16:30</td>
                 <td></td>
             </tr>
             <tr>
                 <td>9</td>
                 <td>Дорога до Тхеквандо</td>
                 <td>Дорога до Тхеквандо</td>
-                <td>16:20 - 17:00</td>
+                <td>16:30 - 17:00</td>
                 <td></td>
             </tr>
             <tr>
@@ -474,7 +474,7 @@
             
             <!-- Четвер -->
             <tr class="day-header thursday">
-                <td rowspan="6">Четвер</td>
+                <td rowspan="7">Четвер</td>
                 <td>1</td>
                 <td>Edukacja wczesnoszkolna</td>
                 <td>Англійська мова</td>
@@ -511,10 +511,17 @@
             </tr>
             <tr>
                 <td>6</td>
-                <td>Ударні</td>
-                <td></td>
+                <td>Speaking Club</td>
+                <td>Гітара</td>
                 <td>13:55 - 14:40</td>
                 <td class="break">14:40 - 14:50 (10 хв)</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Ударні</td>
+                <td>Speaking Club</td>
+                <td>14:50 - 15:35</td>
+                <td></td>
             </tr>
             
             <!-- П'ятниця -->
@@ -575,7 +582,7 @@
                 <td>17:00 - 18:00</td>
                 <td></td>
             </tr>
-        </tbody>
+       </tbody>
     </table>
 
     <div class="footer">
