--- a/index.html
+++ b/index.html
@@ -631,14 +631,14 @@
             { day: 'Четвер', number: 3, daniel: 'Українська мова', mark: 'Математика', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-3 класи)' },
             { day: 'Четвер', number: 4, daniel: 'Англійська мова', mark: 'Українська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 4-5 класи)' },
             { day: 'Четвер', number: 5, daniel: 'Читання', mark: 'Читання', time: '13:00 - 13:45', break: '13:45 - 13:55 (10 хв)' },
-            { day: 'Четвер', number: 6, daniel: 'Speaking Club', mark: 'Гітара', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
-            { day: 'Четвер', number: 7, daniel: 'Ударні', mark: 'Speaking Club', time: '14:50 - 15:35', break: '' },
+            { day: 'Четвер', number: 6, daniel: 'Ударні', mark: 'Англійська мова', time: '13:55 - 14:40', break: '14:40 - 14:50 (10 хв)' },
+            { day: 'Четвер', number: 7, daniel: 'Speaking Club', mark: 'Гітара', time: '14:50 - 15:35', break: '' },
             
             // П'ятниця
             { day: 'П\'ятниця', number: 1, daniel: 'Українська мова', mark: 'Математика', time: '9:00 - 9:45', break: '9:45 - 9:55 (10 хв)' },
             { day: 'П\'ятниця', number: 2, daniel: 'Англійська мова', mark: 'Читання', time: '9:55 - 10:40', break: '10:40 - 10:50 (10 хв)' },
             { day: 'П\'ятниця', number: 3, daniel: 'Математика', mark: 'Edukacja wczesnoszkolna', time: '10:50 - 11:35', break: '11:35 - 11:55 (20 хв) (Обід 1-3 класи)' },
-            { day: 'П\'ятниця', number: 4, daniel: 'Очікування автобуса', mark: 'Англійська мова', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 4-5 класи)' },
+            { day: 'П\'ятниця', number: 4, daniel: 'Очікування автобуса', mark: 'Очікування автобуса', time: '11:55 - 12:40', break: '12:40 - 13:00 (20 хв) (Обід 4-5 класи)' },
             { day: 'П\'ятниця', number: 5, daniel: 'Дорога зі школи до басейну автобусом', mark: 'Очікування автобуса', time: '12:20 - 12:45', break: '' },
             { day: 'П\'ятниця', number: 6, daniel: 'Фізичне виховання (басейн)', mark: 'Дорога зі школи до басейну автобусом', time: '13:00 - 14:00', break: '' },
             { day: 'П\'ятниця', number: 7, daniel: 'Дорога з басейну до школи автобусом', mark: 'Фізичне виховання (басейн)', time: '14:30 - 15:00', break: '' },
