--- a/index.html
+++ b/index.html
@@ -511,15 +511,15 @@
             </tr>
             <tr>
                 <td>6</td>
-                <td>Speaking Club</td>
-                <td>Гітара</td>
+                <td>Ударні</td>
+                <td>Англійська мова</td>
                 <td>13:55 - 14:40</td>
                 <td class="break">14:40 - 14:50 (10 хв)</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>Ударні</td>
                 <td>Speaking Club</td>
+                <td>Гітара</td>
                 <td>14:50 - 15:35</td>
                 <td></td>
             </tr>
