--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
             <tr>
                 <td>4</td>
                 <td>Очікування автобуса</td>
-                <td>Англійська мова</td>
+                <td>Очікування автобуса</td>
                 <td>11:55 - 12:40</td>
                 <td class="lunch">12:40 - 13:00 (20 хв) (Обід 4-5 класи)</td>
             </tr>
